--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
   overflow: hidden; 
 }
 
+.no-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 .shimmer {
   background: linear-gradient(
